# jarvis-voice-ai-agent

./: .gitignore  README.md
backend/: main.py  pyproject.toml
backend/app/: config.py  main.py  model_config.py  voice_config.py
backend/app/auth/: config.py  dependencies.py  jwt_manager.py  oauth.py  redis_sessions.py
backend/app/db/: connection.py  tiers.py  users.py
backend/app/routes/: auth.py  dev.py  sessions.py  voice.py
backend/app/schemas/: access_control.py  sessions.py
backend/app/services/: access_control.py  exceptions.py  livekit.py  redis_client.py
chat/: main.py  pyproject.toml
chat/app/: config.py
chat/app/routes/: completions.py
chat/app/schemas/: completions.py
chat/app/services/: chat_storage.py  llm_client.py  redis_client.py
worker/: agent.py  config.py  entry.py  main.py  metric_handlers.py  pyproject.toml  redis_client.py  utils.py
