[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.30.0",
    "authlib>=1.6.1",
    "databases>=0.9.0",
    "fastapi>=0.116.1",
    "itsdangerous>=2.2.0",
    "livekit-api>=1.0.5",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.1",
    "python-jose>=3.5.0",
    "upstash-redis>=1.4.0",
    "uvicorn>=0.35.0",
]
